--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
+    "next-intl": "^4.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
